Added rendering for the cells

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Pondy color theme: 
-light blue: #D6DAFA
-dark blue: #8D98DB
+light blue: hsl(233, 78%, 98%)
+dark blue: hsl(232, 52%, 71%)
 dark green: #2C965A
  */
 
