Added winner screen
- and some more theme specific board markers
- and did some refactoring

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Pondy color theme: 
 light blue: hsl(233, 78%, 98%)
 dark blue: hsl(232, 52%, 71%)
-dark green: #2C965A
+dark green: hsl(146, 55%, 38%)
  */
 
 .App {
