--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -32,3 +32,25 @@
   font-weight: 700;
   color: hsl(232, 52%, 71%);
 }
+
+.Board-marker-place-enter {
+  opacity: 0.01;
+  width: 200px;
+}
+
+.Board-marker-place-enter.Board-marker-place-enter-active {
+  opacity: 1;
+  width: 100px;
+  transition: 700ms;
+}
+
+.Board-marker-place-leave {
+  opacity: 1;
+  width: 100px;
+}
+
+.Board-marker-place-leave.Board-marker-place-leave-active {
+  opacity: 0.01;
+  width: 200px;
+  transition: 700ms;
+}
