--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 /* Pondy color theme: 
-light blue: hsl(233, 78%, 98%)
-dark blue: hsl(232, 52%, 71%)
+light blue: hsl(141, 43%, 73%)
+dark blue: hsl(199, 36%, 39%)
 dark green: hsl(107, 18%, 50%);
+light green: hsl(60, 32%, 82%)
  */
 
 .App {
@@ -9,10 +10,10 @@ dark green: hsl(107, 18%, 50%);
 }
 
 .App-header {
-  background-color: #8D98DB;
+  background-color: hsl(199, 36%, 39%);
   height: 100px;
   padding: 30px;
-  border-bottom: 7px solid hsl(232, 52%, 90%);
+  border-bottom: 7px solid hsl(60, 32%, 82%);
   color: white;
 }
 
@@ -26,7 +27,7 @@ dark green: hsl(107, 18%, 50%);
 
 .App-background {
   position: absolute;
-  background-color: hsl(107, 18%, 50%);
+  background-color: hsl(108, 20%, 49%);
   height: 100%;
   width: 100%;
   z-index: -1;
