--- a/src/Components/Players.css
+++ b/src/Components/Players.css
@@ -1,5 +1,5 @@
 .Players {
-  margin-top: 20px;
+  margin-top: 85px;
 }
 
 .Players-name {
@@ -16,20 +16,22 @@
   border: none;
   margin: 2px;
   width: 180px;
+  background: none;
+  color: hsl(60, 32%, 80%);
 }
 
 .Players-input-disabled {
-  color: hsl(0, 0%, 65%);
+  color: hsl(60, 32%, 62%);
   width: 80px;
 }
 
 .Players-input-active:hover {
   margin: 0;
-  border: 2px solid hsl(232, 52%, 82%);
+  border: 2px solid hsl(18, 63%, 76%);
   border-radius: 4px;
 }
 
 .Players-current-player {
   font-weight: bold;
-  color: hsl(146, 55%, 38%);
+  color: hsl(18, 63%, 76%);
 }
