--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ light green: hsl(60, 32%, 82%)
   background-size: 600px 500px;
   background-repeat: no-repeat;
   background-position: center top;    
-  margin: 40px 0;
+  margin-top: 40px;
   height: 100%;
 }
 
