--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ light green: hsl(60, 32%, 82%)
   text-align: center;
   font-family: 'Arima Madurai', cursive;
   color: white;
+  background-color: hsl(108, 20%, 49%);
+  height: 100%;
 }
 
 .App-header {
@@ -24,6 +26,7 @@ light green: hsl(60, 32%, 82%)
 
 .App-description {
   margin: 10px;
+  opacity: .7;
 }
 
 .App-body {    
@@ -31,13 +34,4 @@ light green: hsl(60, 32%, 82%)
   background-repeat: no-repeat;
   background-position: center top;    
   margin-top: 40px;
-  height: 100%;
-}
-
-.App-background {
-  position: absolute;
-  background-color: hsl(108, 20%, 49%);
-  height: 100%;
-  width: 100%;
-  z-index: -1;
 }
